# MarketAgent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: benchmark.yaml  inference.yaml  routing.yaml  training.yaml
docker/sandbox/: Dockerfile  executor.py  runner.py
docs/: datasets.md  models.md  routing-research.md  training.md
src/small_models_society/: __init__.py  cli.py  evaluation.py  fixtures.py  sandbox.py  schemas.py
src/small_models_society/data/: __init__.py  config.py  loaders.py  prepare.py
src/small_models_society/experiments/: __init__.py  lora_matrix.py  prompt_matrix.py  workflow_matrix.py
src/small_models_society/inference/: __init__.py  adapters.py  config.py  contracts.py  hardware.py  huggingface.py  prompts.py  runner.py
src/small_models_society/resources/: __init__.py  prompt_profiles.yaml  training.yaml
src/small_models_society/retrieval/: __init__.py  bm25.py  contracts.py  corpus.py  rag.py
src/small_models_society/routing/: __init__.py  artifacts.py  config.py  contracts.py  data.py  local.py  policy.py  registry.py  replay.py
src/small_models_society/scoring/: __init__.py  knowledge.py  logic.py  math.py
src/small_models_society/tools/: __init__.py  calculator.py
src/small_models_society/training/: __init__.py  config.py  contracts.py  formatting.py  hardware.py  prepare.py  runner.py  trainer.py
tests/: test_adapter_inference.py  test_bm25.py  test_calculator.py  test_candidate_workflow_smoke.py  test_cli.py  test_data_prepare.py  test_evaluation.py  test_huggingface_backend.py  test_inference_cli.py  test_inference_config.py  test_inference_contracts.py  test_inference_hardware.py  test_inference_runner.py  test_lora_matrix.py  test_lora_training_smoke.py  test_packaged_resources.py  test_prompt_matrix.py  test_prompts.py  test_qwen_model_smoke.py  test_rag.py  test_retrieval_contracts.py  test_retrieval_corpus.py  test_routing_config.py  test_routing_contracts.py  test_routing_data.py  test_routing_local.py  test_routing_policy.py  test_routing_replay.py  test_routing_replay_cli.py  test_sandbox.py  test_sandbox_docker.py  test_schemas.py  test_scoring.py  test_training_cli.py  test_training_config.py  test_training_formatting.py  test_training_hardware.py  test_training_prepare.py  test_training_runner.py  test_training_trainer.py  (+1 more)
tests/fixtures/: benchmark.jsonl
tests/fixtures/routing/: policy_contexts.jsonl  pricing.json  replay_captures.jsonl  replay_requests.jsonl
